# news-app

news-app-backend/: .gitignore  CMakeLists.txt  README.md  fedora_install.sh  run.sh  ubuntu_install.sh
news-app-backend/include/: article_fetcher.hpp  article_recommender.hpp  helpers.hpp
news-app-backend/src/: article_fetcher.cpp  article_recommender.cpp  helpers.cpp  main.cpp
